--- a/projetsre/Dockerfile
+++ b/projetsre/Dockerfile
@@ -5,8 +5,8 @@ RUN npm install
 COPY . .
 RUN npm run build
 
-FROM nginx:1.19.0-alpine as prod
+FROM nginx:stable-alpine as prod
 COPY --from=build /app/dist /usr/share/nginx/html
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off"]
+CMD ["nginx", "-g", "daemon off;"]
 
